tests/spring-service/complex-service/expected/spring-service/templates/post-deployment/ingress-public.yaml
---
# Source: spring-service/templates/post-deployment/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myservice-public
  namespace: "team-supercool"
  annotations:
    nginx.ingress.kubernetes.io/custom-http-errors: 502
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2.mycompany.tld/oauth2/start?rd=https%3A%2F%2F$http_host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://oauth2.mycompany.tld/oauth2/auth
spec:
  ingressClassName: nginx-public
  rules:
    - host: mycompany.tld
      http:
        paths:
          - path: /api/v1/public
            pathType: Prefix
            backend:
              service:
                name: myservice
                port:
                  number: 80
          - path: /welcome
            pathType: Exact
            backend:
              service:
                name: myservice
                port:
                  number: 80
    - host: myservice.othercompany.tld
      http:
        paths:
          - path: /api/v1/public
            pathType: Prefix
            backend:
              service:
                name: myservice
                port:
                  number: 80
          - path: /welcome
            pathType: Exact
            backend:
              service:
                name: myservice
                port:
                  number: 80
