tests/spring-service/complex-service/expected/spring-service/templates/post-deployment/ingress.yaml
---
# Source: spring-service/templates/post-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myservice
  namespace: "team-supercool"
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/custom-http-errors: 502
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: myservice-external-secret
    nginx.ingress.kubernetes.io/auth-realm: myservice
spec:
  rules:
    - host: myservice.mycompany.tld
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myservice
                port:
                  number: 80
